--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,11 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Student Name
+title : Qing Zhu
 author :
-  name : Student Name
-  email : bsharve@gmail.com
-  github : bsharvey
-  twitter : bsharvey
-  feedburner : nil
+  name : Qing Zhu
+  email : qingzhu37@outlook.com
+  github : qingzhu37
 
 production_url : https://bsharvey.github.io/
 
